--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   </head>
 
-<body >
+<body style="overflow-x:hidden" >
 
 
 
@@ -50,7 +50,7 @@
           
           </div>
 
-          <div class="title"  style="margin-left: 300px;">
+          <div class="title"  style="margin-left: 200px;">
 
             <h1>Les ennemis du faso</h1>
           </div>
@@ -101,7 +101,7 @@
             <h1>Lueur d'espoir</h1>
           </div>
 
-<div class="home3" style="background-image: url(images/Masquesolairejaune_8490a216-0b22-4dec-8792-e725f69bfa11_3469x.webp); background-size: cover;" >
+<div class="home3" style="background-image: url(images/Masquesolairejaune_8490a216-0b22-4dec-8792-e725f69bfa11_3469x.webp); " >
  
 
 
